@@ -316,7 +316,7 @@ The event names may be any available in the "Edit Event Texts" window.
 There are also some extra "special" events you may hook using this function.
 Currently they are:<blockquote>
 "Open Context" - Called when a new xchat_context is created.
-"Close Context" - Called when a xchat_context pointer is closed.
+<br>"Close Context" - Called when a xchat_context pointer is closed.
 <br>"Focus Tab" - Called when a tab is brought to front.
 <br>"Focus Window" - Called a toplevel window is focused, or the main
 tab-window is focused by the window manager.
